FIX: Corrected the width overflow of About

--- a/src/pages/styles/About.css
+++ b/src/pages/styles/About.css
@@ -7,7 +7,6 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin-left: 30px;
     margin-top: 30px;
 }
 
